# AICanteen

./: .gitignore  README.md  README.zh-CN.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov7-tiny.param
app/src/main/java/com/tencent/ncnnyolov7/: MainActivity.java  MenuActivity.java  NcnnYolov7.java
app/src/main/java/com/tencent/ncnnyolov7/bean/: ElemeGroupedItem.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yoloncnn.cpp
app/src/main/res/drawable/: checkout.xml  round_rectangle.xml
app/src/main/res/layout/: adapter_eleme_secondary_linear.xml  empty_adapter_linkage_secondary_footer.xml  main.xml  menu.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
